--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   <!-- Descrição básica (SEO simples) -->
   <meta name="description" content="Planner digital para organização pessoal e profissional.">
 
+  <!-- Suporte mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
