--- a/index.html
+++ b/index.html
@@ -66,7 +66,12 @@
             Uma revolução pessoal que transformará seu modo de viver, abrindo portas para a realização dos seus maiores sonhos.
           </p>
 
-          <a href="#" class="hero-button">
+          <a
+            href="https://pay.cakto.com.br/3fqzy4m_696078"
+            class="hero-button"
+            target="_blank"
+            rel="noopener"
+          >
             Comece sua jornada de<br>
             <strong>Transformação</strong>
           </a>
@@ -85,10 +90,12 @@
     <section class="features">
 
       <div class="features-header">
-        <span class="features-tag">NÃO SE ESQUEÇA</span>
+        <span class="features-tag">NÃO SE ESQUEÇA</span><br><br>
 
-        <h2>
-          Conhecimento <span>→</span> Planejamento <span>→</span> Ação
+        <h2 class="features-title">
+          Conhecimento <span>→</span><br> 
+          Planejamento <span>→</span><br>
+          Ação <span>→</span><br>
         </h2>
 
         <p>
@@ -98,18 +105,12 @@
       </div>
 
       <div class="features-grid">
-
         <div class="feature-card">Assuma o controle da sua vida</div>
-        <div class="feature-card">Cuide da sua vida financeira</div>
         <div class="feature-card">Crie novos hábitos</div>
-        <div class="feature-card">Promova sua saúde e bem-estar</div>
         <div class="feature-card">Defina suas metas</div>
-        <div class="feature-card">Avance em sua vida acadêmica</div>
         <div class="feature-card">Acompanhe seu progresso</div>
-        <div class="feature-card">Desenvolva sua trajetória profissional</div>
         <div class="feature-card">Faça registros importantes</div>
         <div class="feature-card">Revise todo o processo</div>
-
       </div>
 
     </section>
@@ -188,10 +189,15 @@
     </section>
 
     <section class="devices-section">
-      <a href="#" class="cta-button">
-        FAÇA ACONTECER,<br>
-        TENTE NOVA MENTE
-      </a>
+          <a
+            href="https://pay.cakto.com.br/3fqzy4m_696078"
+            class="cta-button hero-button"
+            target="_blank"
+            rel="noopener"
+          >
+            FAÇA ACONTECER,<br>
+            TENTE NOVA MENTE
+          </a>
 
       <div class="devices-content">
         <img src="assets/iconpc.png" alt="Acesse em qualquer dispositivo" />
@@ -285,18 +291,6 @@
 
           <div class="developer-name">Tauane Talia</div>
           <div class="developer-divider"></div>
-
-          <div class="developer-socials">
-            <a class="social-icon tiktok" href="#" target="_blank" aria-label="TikTok">
-              <i class="fa-brands fa-tiktok"></i>
-            </a>
-            <a class="social-icon instagram" href="#" target="_blank" aria-label="Instagram">
-              <i class="fa-brands fa-instagram"></i>
-            </a>
-            <a class="social-icon whatsapp" href="#" target="_blank" aria-label="WhatsApp">
-              <i class="fa-brands fa-whatsapp"></i>
-            </a>
-          </div>
         </div>
 
         <div class="developer-right">
@@ -400,7 +394,7 @@
 
           <!-- WHATSAPP -->
           <a
-            href="https://wa.me/SEUNUMEROAQUI"
+            href="https://wa.me/48992198381?text=Estava%20visitando%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es."
             target="_blank"
             class="final-whatsapp"
           >
